	Completion/Linux/Command/_htop,	Completion/Linux/Command/_kpartx,
	Completion/Unix/Command/_top,	Completion/Unix/Command/_tput,
	Completion/Unix/Command/_zpool: new completers and improvement
	for _zpool.

2016-02-11  Peter Stephenson  <p.stephenson@samsung.com>

	* 37946: Src/utils.c: make rm * warnings more informative about
	files being deleted.

2016-02-09  Peter Stephenson  <p.stephenson@samsung.com>

	* 37893: Doc/Zsh/builtins.yo: document behaviour of typeset -U
	for parameters with multiple interfaces.

2016-02-09  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37924: Completion/Unix/Command/_git: Completion: _git:
	Complete files for 'check-ignore'

	* 37923: Completion/Debian/Command/_bts: Completion: _bts:
	Fix quoting of $DEBEMAIL.

	* 37922: Util/zyodl.vim: zyodl.vim: Add alternative installation
	instructions.

	* 37896: Doc/Zsh/builtins.yo: zshbuiltins: Document argv
	behaviour of 'source' without arguments

	* unposted: ChangeLog: Move the 37678 entry to the correct
	location (and author).

2016-02-08  Barton E. Schaefer  <schaefer@zsh.org>

	* 37914: Src/builtin.c, Test/E01options.ztst: reparse associative
	array subscripts in "unset" so keys with "[" or "]" may be
	backslash-escaped.  Fix erroneous test case this revealed.

2016-02-07  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 37895: Src/params.c, Doc/Zsh/parmas.yo: add ZSH_SCRIPT as
	always available form of POISX $0.

2016-02-07  Dominik Ritter  <dritter03@googlemail.com>

	* unposted: Doc/Zsh/mod_complist.yo: complist module docs:
	Fix parameter name in an example.

2016-02-07  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: README: Follow-up to 37833: extend description of
	37804 in README.

2016-02-04  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 37874: Src/Builtins/sched.c: remove unused function argument.

2016-02-03  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 37868: Src/Modules/curses.c, Src/Modules/param_private.c,